--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,10 @@ android {
     compileSdkVersion 27
 
     defaultConfig {
-        applicationId "com.prof.rssparser.example"
+        applicationId "liga.bonber.info"
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode 6
+        versionCode 8
         versionName "1.3"
     }
     buildTypes {
